--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,10 @@ num_cpus = "1.17"
 serde = { version = "1", features = ["derive"] }
 toml = "0.8"
 
+# TUI
+ratatui = "0.29"
+crossterm = "0.28"
+
 [profile.release]
 lto = true
 codegen-units = 1
