--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,11 +35,15 @@ num_cpus = "1.17"
 
 # Config parsing
 serde = { version = "1", features = ["derive"] }
-toml = "0.8"
+toml = "0.9"
 
 # TUI
 ratatui = "0.29"
-crossterm = "0.28"
+crossterm = "0.29"
+
+# Native Unix syscalls (unlinkat)
+[target.'cfg(unix)'.dependencies]
+nix = { version = "0.30", features = ["fs"] }
 
 [profile.release]
 lto = true
